--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -378,12 +378,14 @@
                         <outlet property="bootsButton" destination="Tfq-jD-en0" id="mKN-A5-Jk7"/>
                         <outlet property="chestButton" destination="7D5-tH-Ejn" id="7fD-W7-cQw"/>
                         <outlet property="collectionView" destination="EmM-eE-XlB" id="VWx-pB-YbB"/>
+                        <outlet property="decreaseHealthButton" destination="IG2-I5-mWV" id="lka-AS-ebc"/>
                         <outlet property="firstAccessoryButton" destination="ar4-85-oMt" id="5bg-CA-udU"/>
                         <outlet property="firstSpellButton" destination="n7P-e8-J8t" id="vMA-60-PPK"/>
                         <outlet property="fourthSpellButton" destination="7Kb-wS-brh" id="eyv-pY-g14"/>
                         <outlet property="healthImageView" destination="ELO-qo-6rC" id="j9u-lD-n3f"/>
                         <outlet property="healthLabel" destination="cK2-iC-meJ" id="lGr-lq-BHR"/>
                         <outlet property="helmetButton" destination="IHP-mI-kKS" id="tWD-K3-lXy"/>
+                        <outlet property="increaseHealthButton" destination="Is3-ZS-0SK" id="BCp-lL-XNJ"/>
                         <outlet property="leftHandButton" destination="675-xe-31g" id="WwL-B3-Rir"/>
                         <outlet property="rightHandButton" destination="yya-Wz-xsE" id="eB8-it-Dxw"/>
                         <outlet property="secondAccessoryButton" destination="z5l-dZ-bU0" id="wYI-1E-OPq"/>
